Fix horizontal scroll on Edge and Chrome

--- a/assets/style.css
+++ b/assets/style.css
@@ -29,6 +29,7 @@ body {
   text-rendering: optimizeSpeed;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 h1,
